# ansible-aisnippet

./: README.md  pyproject.toml  test-output.yml  test.yml
.github/workflows/: main.yml  python-publish.yml
ansible_aisnippet/: __init__.py  aisnippet.py  helpers.py  main.py  snippets.json
